--- a/package.json
+++ b/package.json
@@ -18,15 +18,21 @@
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@types/async-retry": "^1.4.9",
     "@types/jest": "^30.0.0",
     "@types/node": "24.10.1",
     "@types/react": "19.2.6",
     "async-retry": "^1.3.3",
     "concurrently": "^9.2.1",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.3",
+    "eslint-plugin-jest": "^29.2.0",
     "jest": "^30.2.0",
+    "jiti": "^2.6.1",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
-    "typescript": "5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.47.0"
   }
 }
