ci: config `eslint` on `Github Actions`

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "next dev",
     "test": "concurrently -n next,jest -k --hide next \"next dev\" \"npx jest --runInBand\"",
-    "test:watch": "jest --runInBand --watchAll"
+    "test:watch": "jest --runInBand --watchAll",
+    "lint:eslint:check": "eslint .",
+    "lint:eslint:fix": "eslint . --fix"
   },
-  "keywords": [],
+  "keywords": [ ],
   "author": "",
   "license": "ISC",
   "description": "",
