--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "lint:eslint:check": "eslint .",
     "lint:eslint:fix": "eslint . --fix"
   },
-  "keywords": [ ],
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.0.0",
+    "@prisma/client": "^7.0.0",
+    "dotenv": "^17.2.3",
     "next": "^16.0.3",
+    "pg": "^8.16.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
@@ -28,6 +32,7 @@
     "@types/async-retry": "^1.4.9",
     "@types/jest": "^30.0.0",
     "@types/node": "24.10.1",
+    "@types/pg": "^8.15.6",
     "@types/react": "19.2.6",
     "async-retry": "^1.3.3",
     "concurrently": "^9.2.1",
@@ -36,6 +41,7 @@
     "eslint-plugin-jest": "^29.2.0",
     "jest": "^30.2.0",
     "jiti": "^2.6.1",
+    "prisma": "^7.0.0",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
