--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:eslint:check": "eslint .",
     "lint:eslint:fix": "eslint . --fix"
   },
-  "keywords": [],
+  "keywords": [ ],
   "author": "",
   "license": "ISC",
   "description": "",
@@ -36,6 +36,7 @@
     "@types/react": "19.2.6",
     "async-retry": "^1.3.3",
     "concurrently": "^9.2.1",
+    "dotenv-expand": "^12.0.3",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.3",
     "eslint-plugin-jest": "^29.2.0",
