build: add `wait-for-db` script

--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "predev": "npm run services:up",
+    "predev": "npm run services:up && npm run services:wait-for-db && npm run migrations:up",
     "dev": "node infra/scripts/start-development.js",
+    "test": "concurrently -n next,jest --success command-jest -k --hide next \"next dev\" \"npx jest --runInBand\"",
+    "test:watch": "jest --runInBand --watchAll",
+    "migrations:create": "npx prisma migrate dev --config infra/database/prisma.config.ts --schema infra/prisma/",
+    "migrations:up": "npx prisma migrate deploy --config infra/database/prisma.config.ts --schema infra/prisma/",
     "services:up": "docker compose -f infra/compose.yaml up -d",
     "services:stop": "docker compose -f infra/compose.yaml stop",
     "services:down": "docker compose -f infra/compose.yaml down",
-    "test": "concurrently -n next,jest --success command-jest -k --hide next \"next dev\" \"npx jest --runInBand\"",
-    "test:watch": "jest --runInBand --watchAll",
+    "services:wait-for-db": "node infra/scripts/wait-for-db.js",
     "lint:eslint:check": "eslint .",
     "lint:eslint:fix": "eslint . --fix",
-    "migrations:create": "npx prisma migrate dev --config infra/database/prisma.config.ts --schema infra/prisma/",
-    "migrations:up": "npx prisma migrate deploy --config infra/database/prisma.config.ts --schema infra/prisma/",
     "db:view": "prisma studio --config infra/database/prisma.config.ts -p 5050"
   },
   "keywords": [ ],
