chore: remove useless `--schema` option

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "node infra/scripts/start-development.js",
     "test": "concurrently -n next,jest --success command-jest -k --hide next \"next dev\" \"npx jest --runInBand\"",
     "test:watch": "jest --runInBand --watchAll",
-    "migrations:create": "npx prisma migrate dev --config infra/database/prisma.config.ts --schema infra/prisma/",
-    "migrations:up": "npx prisma migrate deploy --config infra/database/prisma.config.ts --schema infra/prisma/",
+    "migrations:create": "npx prisma migrate dev --config infra/database/prisma.config.ts",
+    "migrations:up": "npx prisma migrate deploy --config infra/database/prisma.config.ts",
     "services:up": "docker compose -f infra/compose.yaml up -d",
     "services:stop": "docker compose -f infra/compose.yaml stop",
     "services:down": "docker compose -f infra/compose.yaml down",
