--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "node infra/scripts/start-development.js",
     "test": "concurrently -n next,jest --success command-jest -k --hide next \"next dev\" \"npx jest --runInBand\"",
     "test:watch": "jest --runInBand --watchAll",
+    "premigrations:create": "npm run services:up && npm run services:wait-for-db",
     "migrations:create": "npx prisma migrate dev --config infra/database/prisma.config.ts",
+    "postmigrations:create": "npx prisma generate --config infra/database/prisma.config.ts",
     "migrations:up": "npx prisma migrate deploy --config infra/database/prisma.config.ts",
     "services:up": "docker compose -f infra/compose.yaml up -d",
     "services:stop": "docker compose -f infra/compose.yaml stop",
