--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "predev": "npm run services:up && npm run services:wait-for-db && npm run migrations:up",
     "dev": "node infra/scripts/start-development.js",
-    "test": "concurrently -n next,jest --success command-jest -k --hide next \"next dev\" \"npx jest --runInBand\"",
+    "pretest": "npm run services:up && npm run services:wait-for-db",
+    "test": "concurrently -n next,jest --success command-jest -k --hide next \"next dev\" \"npx jest --runInBand --forceExit\"",
+    "posttest": "npm run services:down",
     "test:watch": "jest --runInBand --watchAll",
     "premigrations:create": "npm run services:up && npm run services:wait-for-db",
     "migrations:create": "npx prisma migrate dev --config infra/database/prisma.config.ts",
