--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/node": "24.10.1",
     "@types/pg": "^8.15.6",
     "@types/react": "19.2.6",
+    "@types/supertest": "^6.0.3",
     "async-retry": "^1.3.3",
     "concurrently": "^9.2.1",
     "dotenv-expand": "^12.0.3",
@@ -53,6 +54,7 @@
     "jest": "^30.2.0",
     "jiti": "^2.6.1",
     "prisma": "^7.0.0",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
