--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "predev": "npm run services:up && npm run services:wait-for-db && npm run migrations:up",
     "dev": "node infra/scripts/start-development.js",
-    "pretest": "npm run services:up && npm run services:wait-for-db",
-    "test": "concurrently -n next,jest --success command-jest -k --hide next \"next dev\" \"npx jest --runInBand --forceExit\"",
+    "pretest": "npm run services:db",
+    "test": "jest --runInBand --forceExit",
     "posttest": "npm run services:down",
+    "pretest:watch": "npm run services:db",
     "test:watch": "jest --runInBand --watchAll",
-    "premigrations:create": "npm run services:up && npm run services:wait-for-db",
+    "premigrations:create": "npm run services:db",
     "migrations:create": "npx prisma migrate dev --config infra/database/prisma.config.ts",
     "postmigrations:create": "npx prisma generate --config infra/database/prisma.config.ts",
     "migrations:up": "npx prisma migrate deploy --config infra/database/prisma.config.ts",
+    "services:db": "npm run services:up && npm run services:wait-for-db",
     "services:up": "docker compose -f infra/compose.yaml up -d",
     "services:stop": "docker compose -f infra/compose.yaml stop",
     "services:down": "docker compose -f infra/compose.yaml down",
