--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "lint:eslint:fix": "eslint . --fix",
     "db:view": "prisma studio --config infra/database/prisma.config.ts -p 5050"
   },
-  "keywords": [ ],
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^7.0.0",
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "next": "^16.0.8",
     "pg": "^8.16.3",
