--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^7.0.0",
     "bcryptjs": "^3.0.3",
+    "cookie": "^1.1.1",
     "dotenv": "^17.2.3",
     "next": "^16.0.8",
     "pg": "^8.16.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "set-cookie-parser": "^2.7.2",
     "zod": "^4.1.13"
   },
   "devDependencies": {
@@ -47,6 +49,7 @@
     "@types/node": "24.10.1",
     "@types/pg": "^8.15.6",
     "@types/react": "19.2.6",
+    "@types/set-cookie-parser": "^2.4.10",
     "@types/supertest": "^6.0.3",
     "async-retry": "^1.3.3",
     "dotenv-expand": "^12.0.3",
